--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <p>This is a page</p>
 </head>
 <body>
-<a href="#">GitHub Pages</a> |
-<a href="#">mDrive</a> |
-<a href="#">CSIS server</a>
+<a href="https://durandal117exe.github.io">GitHub Pages</a> |
+<a href="http://webp.svsu.edu/~jbrodack/">mDrive</a> |
+<a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
 <br />
 <br />
 <h2>Assignments</h2>
