changed moniker below title to identify homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 <h1>Josh Rodack's Student Home Page</h1>
-<p>This is a page</p>
+<p>This is the Github Homepage</p>
 </head>
 <body>
 <a href="https://durandal117exe.github.io">GitHub Pages</a> |
