--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -2,7 +2,7 @@
 <!---->
 <html>
     <head>
-
+        <button><a href=index.html>Return to index </a></button>
     </head>
     <body>
         <img src="images/imagefromimgtag.jpg" alt="Waterfall">
