hope to fix image display

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -5,6 +5,6 @@
         <button><a href=index.html>Return to index </a></button>
     </head>
     <body>
-        <img src="images/imagefromimgtag.jpg" alt="Waterfall">
+        <img src="index/images/imagefromimgtag.jpg" alt="Waterfall">
     </body>
 </html>
