added place holder and potential image fix

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -3,8 +3,10 @@
 <html>
     <head>
         <button><a href=index.html>Return to index </a></button>
+        
     </head>
     <body>
-        <img src="index/images/imagefromimgtag.jpg" alt="Waterfall">
+        <img src="imagefromimgtag.jpg" alt="Waterfall">
+        <img src="https://via.placeholder.com/200" />
     </body>
 </html>
