--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -2,11 +2,11 @@
 <!---->
 <html>
     <head>
-        <button><a href=index.html>Return to index </a></button>
+        <button><a href=../index.html>Return to index </a></button>
         
     </head>
     <body>
-        <img src="imagefromimgtag.jpg" alt="Waterfall">
+        <img src="../images/imagefromimgtag.jpg" alt="Waterfall">
         <img src="https://via.placeholder.com/200" />
     </body>
 </html>
