lets see if this breaks everything

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -2,7 +2,7 @@
 <!---->
 <html>
     <head>
-        <button><a href=../index.html>Return to index </a></button>
+        <button><a href=..>Return to index </a></button>
         
     </head>
     <body>
