please work, I beg you

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -6,7 +6,7 @@
         
     </head>
     <body>
-        <img src="../images/imagefromimgtag.jpg" alt="Waterfall">
+        <img src="https://durandal117exe.github.io/images/imagefromimgtag.jpg" alt="Waterfall">
         <img src="https://via.placeholder.com/200" />
     </body>
 </html>
