--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -8,5 +8,13 @@
     <body>
         <img src="../imagefromimgtag.jpg" alt="Waterfall">
         <img src="https://via.placeholder.com/200" />
+
+        <form>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname">
+        </form>
+
     </body>
 </html>
