--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="http://webp.svsu.edu/~jbrodack/">mDrive</a> |
 <a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
 <br />
+<img src="images/imagefromimgtag.jpg" alt="">
 <br />
 <h2>Assignments</h2>
 <a href="assignments/assignment01.html">Assignment 01</a><br />
