added line under image that should be appearing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
 <br />
 <img src="images/imagefromimgtag.jpg" alt="">
+<p>the image above should work</p>
+<br>
 <br />
 <h2>Assignments</h2>
 <a href="assignments/assignment01.html">Assignment 01</a><br />
