still trying to get the image to properly display,  added image to assignment directory to test if it's a problem with the file itself

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -6,7 +6,7 @@
         
     </head>
     <body>
-        <img src="../imagefromimgtag.jpg" alt="Waterfall">
+        <img src="imagefromimgtag.jpg" alt="Waterfall">
         <img src="https://via.placeholder.com/200" />
 
         <!--#7-->
