--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -6,7 +6,7 @@
         
     </head>
     <body>
-        <img src="imagefromimgtag.jpg" alt="Waterfall">
+        <img src="imagefromimgtag.jpeg" alt="Waterfall">
         <img src="https://via.placeholder.com/200" />
 
         <!--#7-->
