--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="http://webp.svsu.edu/~jbrodack/">mDrive</a> |
 <a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
 <br />
-<img src="imagefromimgtag.jpg" alt="__">
+<img src="imagefromimgtag.jpeg" alt="__">
 
 <br />
 <h2>Assignments</h2>
