--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <a href="http://webp.svsu.edu/~jbrodack/">mDrive</a> |
 <a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
 <br />
-<img src="imagefromimgtag.jpeg" alt="__">
-
+<img src="imagefromimgtag.JPEG" alt="__">
+<img src="pleasework.JPG" alt="work or I'll slit your throat">
 <br />
 <h2>Assignments</h2>
 <a href="assignments/assignment01.html">Assignment 01</a><br />
