--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="http://webp.svsu.edu/~jbrodack/">mDrive</a> |
 <a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
 <br />
-<img src="imagefromimgtag.JPEG" alt="__">
+<img src="images/imagefromimgtag.JPEG" alt="__">
 <img src="pleasework.JPG" alt="work or I'll slit your throat">
 <br />
 <h2>Assignments</h2>
