it, was a fucking typo, I swear to god this world is a nightmare

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -6,7 +6,9 @@
         
     </head>
     <body>
-        <img src="imagefromimgtag.jpeg" alt="Waterfall">
+    </br>
+</br>
+        <img src="../images/imageforimgtag.JPG" alt="Waterfall">
         <img src="https://via.placeholder.com/200" />
 
         <!--#7-->
