added language tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--note to self, if ctrl click doesn't work, the name  or path has a problem-->
-<html>
+<html lang="en">
 <head>
 
 
