--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!---->
-<html>
+<html lang="en">
     <head>
         <button><a href=../index.html>Return to index </a></button>
         
