implemented initial version of code tag

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -19,6 +19,14 @@
             <label for="lname">Last name:</label><br>
             <input type="text" id="lname" name="lname">
         </form>
-
+        <!--honestly, kind of confused as to what this 
+            instruction wants from me-->
+            <!--#6-->
+        <p><code>&lt;!doctype html&gt;
+            &lt;html lang=&quot;en&quot;&gt;
+            &lt;head&gt;
+            &lt;title&gt;Minimial HTML&lt;/title&gt;
+            &lt;/head&gt;
+            &lt;body&gt;</code></p>
     </body>
 </html>
