--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -22,11 +22,11 @@
         <!--honestly, kind of confused as to what this 
             instruction wants from me-->
             <!--#6-->
-        <p><code>&lt;!doctype html&gt;
-            &lt;html lang=&quot;en&quot;&gt;
-            &lt;head&gt;
-            &lt;title&gt;Minimial HTML&lt;/title&gt;
-            &lt;/head&gt;
+        <p><code>&lt;!doctype html&gt;</br>
+            &lt;html lang=&quot;en&quot;&gt;</br>
+            &lt;head&gt;</br>
+            &lt;title&gt;Minimial HTML&lt;/title&gt;</br>
+            &lt;/head&gt;</br>
             &lt;body&gt;</code></p>
     </body>
 </html>
