testing file path shennanigans

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -13,7 +13,7 @@
     <!--#5-->
     <img src="../images/imageforimgtag.JPG" alt="Waterfall">
     <img src="https://via.placeholder.com/200" />
-    <img src="../images/proof.JPG" alt="making sure I have proof that it works in some kind of build of the site">
+    <img src="proof.JPG" alt="making sure I have proof that it works in some kind of build of the site">
 
     <!--#7-->
     <form>
