--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -11,10 +11,11 @@
     </br>
     </br>
     <!--#5-->
-    <img src="../images/imageforimgtag.JPG" alt="Waterfall">
+    <img src="/images/imageforimgtag.JPG" alt="Waterfall">
     <img src="https://via.placeholder.com/200" />
     <img src="proof.JPG" alt="making sure I have proof that it works in some kind of build of the site">
-
+    <!--note about thir image, code is no different 
+    regarding waterfall image between local and github pages-->
     <!--#7-->
     <form>
         <label for="fname">First name:</label><br>
