formatting fixes to index

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -13,9 +13,11 @@
     <!--#5-->
     <img src="../images/imageforimgtag.JPG" alt="Waterfall">
     <img src="https://via.placeholder.com/200" />
+    </br>
     <img src="proof.JPG" alt="making sure I have proof that it works in some kind of build of the site">
-    <!--note about thir image, code is no different 
+    <!--note about third image, code is no different 
     regarding waterfall image between local and github pages-->
+    
     <!--#7-->
     <form>
         <label for="fname">First name:</label><br>
