--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <!--note to self, if ctrl click doesn't work, the name  or path has a problem-->
 <html lang="en">
+
 <head>
 
 
-<h1>Josh Rodack's Student Home Page</h1>
-<p>This is the Github Homepage</p>
+    <title>
+        <h1>Josh Rodack's Student Home Page</h1>
+    </title>
+    <p>This is the Github Homepage</p>
 </head>
-<body>
-<a href="https://durandal117exe.github.io">GitHub Pages</a> |
-<a href="http://webp.svsu.edu/~jbrodack/">mDrive</a> |
-<a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
-<br />
 
-<br />
-<h2>Assignments</h2>
-<a href="assignments/assignment01.html">Assignment 01</a><br />
-<a href="#">Assignment 02</a><br />
-<a href="#">Assignment 03</a><br />
-<a href="#">Assignment 04</a><br />
-<a href="#">Assignment 05</a><br />
-<a href="#">Assignment 06</a><br />
-<a href="#">Assignment 07</a><br />
+<body>
+    <a href="https://durandal117exe.github.io">GitHub Pages</a> |
+    <a href="http://webp.svsu.edu/~jbrodack/">mDrive</a> |
+    <a href="https://csis.svsu.edu/~jbrodack/">CSIS server</a>
+    <br />
+
+    <br />
+    <h2>Assignments</h2>
+    <a href="assignments/assignment01.html">Assignment 01</a><br />
+    <a href="#">Assignment 02</a><br />
+    <a href="#">Assignment 03</a><br />
+    <a href="#">Assignment 04</a><br />
+    <a href="#">Assignment 05</a><br />
+    <a href="#">Assignment 06</a><br />
+    <a href="#">Assignment 07</a><br />
 </body>
 
 </html>
