added table to assignment 01

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -17,7 +17,7 @@
     <img src="proof.JPG" alt="making sure I have proof that it works in some kind of build of the site">
     <!--note about third image, code is no different 
     regarding waterfall image between local and github pages-->
-    
+
     <!--#7-->
     <form>
         <label for="fname">First name:</label><br>
@@ -34,7 +34,31 @@
             &lt;title&gt;Minimial HTML&lt;/title&gt;</br>
             &lt;/head&gt;</br>
             &lt;body&gt;</code></p>
-
+    </br>
+    <!--#8-->
+    <table>
+        <tr>
+            <th>Category 1</th>
+            <th>Category 2</th>
+            <th>Category 3</th>
+            <th>Category 4</th>
+            <th>Category 5</th>
+            <th>Category 6</th>
+            <th>Category 7</th>
+            <th>Category 8</th>
+        </tr>
+        <tr>
+            <td>Value 1</td>
+            <td>Value 2</td>
+            <td>Value 3</td>
+            <td>Value 4</td>
+            <td>Value 5</td>
+            <td>Value 6</td>
+            <td>Value 7</td>
+            <td>Value 8</td>
+            
+        </tr>
+    </table>
 
 
 
