please show the title you useless language

--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <!--note to self, if ctrl click doesn't work, the name  or path has a problem-->
 <html lang="en">
 
-<head>
-    <title>
-        <h1>Josh Rodack's Student Home Page</h1>
-        <p>This is the Github Homepage</p>
-    </title>
-   
-</head>
+<head><title>
+    <h1>Josh Rodack's Student Home Page</h1>
+    <p>This is the Github Homepage</p>
+</title></head>
+  
 <!--the html checker keeps saying this is a stray end tag, but I can't find a problem with it. Removing it
 gets rid of the title-->
 
