--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -14,7 +14,7 @@
     <img src="../images/imageforimgtag.JPG" alt="Waterfall">
     <img src="https://via.placeholder.com/200" />
     </br>
-    <img src="proof.JPG" alt="making sure I have proof that it works in some kind of build of the site">
+    <img src="proof.JPG" alt="the waterfall pic works on local and not github, I don't know why">
     <!--note about third image, code is no different 
     regarding waterfall image between local and github pages-->
 
