--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <!--note to self, if ctrl click doesn't work, the name  or path has a problem-->
 <html lang="en">
 
-<head><title>
+<head>
     <h1>Josh Rodack's Student Home Page</h1>
     <p>This is the Github Homepage</p>
-</title></head>
+</head>
+<!--for some reason, if I stick the title in the title tag, it refuses to render on the site. Probably due to user error of some kind-->
   
 <!--the html checker keeps saying this is a stray end tag, but I can't find a problem with it. Removing it
 gets rid of the title-->
