changed table to have a theme

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -17,6 +17,9 @@
     <img src="proof.JPG" alt="the waterfall pic works on local and not github, I don't know why">
     <!--note about third image, code is no different 
     regarding waterfall image between local and github pages-->
+    <!--As far as I can tell, there is no reason for the image not to display in the github version, everything else is identical between local and github versions.
+    Maybe it's a quirk of github or some undefined user error, but as far as I know, the path is correct, I can control click the file path to get to the image, and the name is spelled correctly.
+    My guess is maybe there's a bug in the repository or I missed some kind of esoterric fix. My money's split either way.-->
 
     <!--#7-->
     <form>
@@ -38,24 +41,16 @@
     <!--#8-->
     <table>
         <tr>
-            <th>Category 1</th>
-            <th>Category 2</th>
-            <th>Category 3</th>
-            <th>Category 4</th>
-            <th>Category 5</th>
-            <th>Category 6</th>
-            <th>Category 7</th>
-            <th>Category 8</th>
+            <th>Monthly Salary</th>
+            <th>Passive Income</th>
+            <th>Expenses</th>
+            
         </tr>
         <tr>
-            <td>Value 1</td>
-            <td>Value 2</td>
-            <td>Value 3</td>
-            <td>Value 4</td>
-            <td>Value 5</td>
-            <td>Value 6</td>
-            <td>Value 7</td>
-            <td>Value 8</td>
+            <td>$60,000</td>
+            <td>$800</td>
+            <td>$35,000</td>
+            
 
         </tr>
     </table>
