--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -11,6 +11,7 @@
     </br>
     </br>
     <!--#5-->
+    
     <img src="../images/imageforimgtag.JPG" alt="Waterfall">
     <img src="https://via.placeholder.com/200" />
     </br>
@@ -18,8 +19,9 @@
     <!--note about third image, code is no different 
     regarding waterfall image between local and github pages-->
     <!--As far as I can tell, there is no reason for the image not to display in the github version, everything else is identical between local and github versions.
-    Maybe it's a quirk of github or some undefined user error, but as far as I know, the path is correct, I can control click the file path to get to the image, and the name is spelled correctly.
-    My guess is maybe there's a bug in the repository or I missed some kind of esoterric fix. My money's split either way.-->
+    Maybe it's a quirk of github or some undefined user error, but as far as I know, the path is correct, I can control click the file path to get to the image, 
+    and the name is spelled correctly. My guess is maybe there's a bug in the repository or I missed some kind of esoterric fix. My money's split either way.
+    The funny thing is, for a while it worked just fine. Then it suddenly broke.-->
 
     <!--#6-->
     <p><code>&lt;!doctype html&gt;</br>
