hopefully the last changes of the night, everything should be in order at the moment

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -3,18 +3,18 @@
 <html lang="en">
 
 <head>
-    <button><a href=../index.html>Return to index </a></button>
+    <a href=../index.html>Return to index </a>
 
 </head>
 
 <body>
-    </br>
-    </br>
+    <br>
+    <br>
     <!--#5-->
-    
+
     <img src="../images/imageforimgtag.JPG" alt="Waterfall">
-    <img src="https://via.placeholder.com/200" />
-    </br>
+    <img src="https://via.placeholder.com/200" alt="placeholder" />
+    <br>
     <img src="proof.JPG" alt="the waterfall pic works on local and not github, I don't know why">
     <!--note about third image, code is no different 
     regarding waterfall image between local and github pages-->
@@ -24,13 +24,13 @@
     The funny thing is, for a while it worked just fine. Then it suddenly broke.-->
 
     <!--#6-->
-    <p><code>&lt;!doctype html&gt;</br>
-        &lt;html lang=&quot;en&quot;&gt;</br>
-        &lt;head&gt;</br>
-        &lt;title&gt;Minimial HTML&lt;/title&gt;</br>
-        &lt;/head&gt;</br>
+    <p><code>&lt;!doctype html&gt;<br>
+        &lt;html lang=&quot;en&quot;&gt;<br>
+        &lt;head&gt;<br>
+        &lt;title&gt;Minimial HTML&lt;/title&gt;<br>
+        &lt;/head&gt;<br>
         &lt;body&gt;</code></p>
-    </br>
+    <br>
     <!--#7-->
     <form>
         <label for="fname">First name:</label><br>
@@ -58,7 +58,8 @@
         </tr>
     </table>
 
-
+    <!--I elected not to reformat the page as a semantic article at this time. I'm still having trouble getting the image to show up and I do not want to risk breaking the
+    page any further. As it stands the page fulfills 8-9 of the requirements, and I do not wish to risk that for a 10th point, as it's getting late and close to the deadline.-->
 
 
 </body>
