--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <p>This is the Github Homepage</p>
 </head>
 <!--for some reason, if I stick the title in the title tag, it refuses to render on the site. Probably due to user error of some kind-->
-  
+
 <!--the html checker keeps saying this is a stray end tag, but I can't find a problem with it. Removing it
 gets rid of the title-->
+<!--As a note, I ran the site through an html validator, I fixed all the errors, with three notable exceptions.
+You'll notice the lack of a <title> tag in both index and assignment01. That's because for whatever reason, htmls keeps disapearing everything in the title tags, for some reason. 
+it also keeps saying the closing tag for the <head> element is a stray tag, despite the fact that removing it only breaks the site further. it also says that the opening tag 
+for the <body> is unneeded as it was "already" open but removing it has a similar effect to removing the closing tag for <head>. This applies to both pages. -->
 
 <body>
     <a href="https://durandal117exe.github.io">GitHub Pages</a> |
