--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ for the <body> is unneeded as it was "already" open but removing it has a simila
     <br />
     <h2>Assignments</h2>
     <a href="assignments/assignment01.html">Assignment 01</a><br />
-    <a href="#">Assignment 02</a><br />
+    <a href="assignments/assignment02.html">Assignment 02</a><br />
     <a href="#">Assignment 03</a><br />
     <a href="#">Assignment 04</a><br />
     <a href="#">Assignment 05</a><br />
