--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -1,4 +1,7 @@
 
+<head>
+    <link rel="stylesheet" href="assignment02.css">
+  </head>
 <header>
     <h1>Assignment 02</h1>
     <p>by Joshua Rodack</p>
