--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -25,6 +25,7 @@
     <li>inline, internal and external CSS</li>
   </ul>
   <hr />
+  <!--implemented # 1-->
   <p style="color:red;">
     Hello, world
   </p>
