added stuff (don't ask me)

--- a/clubmenowapp/clubAbout.html
+++ b/clubmenowapp/clubAbout.html
@@ -1,1 +1,9 @@
-<p>Your code here</p>
+<!DOCTYPE html>
+<html lang=en>
+<head></head>
+<body>
+<h1>ClubMeNow version 1.0.0</h1>
+<button type="button"><a href="clubDistanceList.html"> Back to the Distance List</a></button>
+</body>
+
+</html>
