--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ for the <body> is unneeded as it was "already" open but removing it has a simila
     <a href="assignments/assignment05.html">Assignment 05</a><br />
     <a href="assignments/assignment06.html">Assignment 06</a><br />
     <a href="assignments/assignment07.html">Assignment 07</a><br />
+    <br />
+    <a href="clubmenowapp/clubMeNow.html">ClubMeNow</a>
 </body>
 
 </html>
