--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -7,6 +7,7 @@
 
 <body>
     <h2>Example Chart using Chart.js</h2>
+    
     <canvas id="myChart"></canvas>
 
     <h2>Example AJAX call to Covid19api</h2>
@@ -24,6 +25,8 @@
         dayjs().format();
         console.log(dayjs().format("YYYY-MM-DD"));
     </script>
+    <script src="assignment05.js"></script>
+   
 </body>
 
 </html>
