--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -7,7 +7,7 @@
 
 <body>
     <h2>Example Chart using Chart.js</h2>
-    
+    <p>Assignment05</p>
     <canvas id="myChart"></canvas>
 
     <h2>Example AJAX call to Covid19api</h2>
